refactor: improve SconeSessionSecurityConfig validation